--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,6 +1,5 @@
-<p>You can bind our <code>NgbPagination</code> component with slicing the data list</p>
 
-<table class="table table-striped">
+<table class="table">
 	<thead>
 		<tr>
 			<th scope="col">#</th>
@@ -36,8 +35,8 @@
 	</ngb-pagination>
 
 	<select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshCountries()">
-		<option [ngValue]="2">2 items per page</option>
-		<option [ngValue]="4">4 items per page</option>
-		<option [ngValue]="6">6 items per page</option>
+		<option [ngValue]="15">15 items per page</option>
+		<option [ngValue]="30">30 items per page</option>
+		<option [ngValue]="45">45 items per page</option>
 	</select>
 </div>
