--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -28,7 +28,7 @@
 <div class="d-flex justify-content-between p-2">
 	<ngb-pagination
 		[collectionSize]="collectionSize"
-		[page]="page"
+		[(page)]="page"
 		[pageSize]="pageSize"
 		(pageChange)="refreshCountries()"
 	>
