--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -2,25 +2,20 @@
 <table class="table">
 	<thead>
 		<tr>
-			<th scope="col">#</th>
-			<th scope="col">Country</th>
-			<th scope="col">Area</th>
-			<th scope="col">Population</th>
+			<th scope="col">#id</th>
+			<th scope="col">Nombre</th>
+			<th scope="col">Apellido</th>
+			<th scope="col">Correo</th>
+      <th scope="col">Estado</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr *ngFor="let country of countries">
-			<th scope="row">{{ country.id }}</th>
-			<td>
-				<img
-					[src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag"
-					class="me-2"
-					style="width: 20px"
-				/>
-				{{ country.name }}
-			</td>
-			<td>{{ country.area | number}}</td>
-			<td>{{ country.population | number }}</td>
+		<tr *ngFor="let client of clients">
+			<th scope="row">{{ client.id }}</th>
+			<td>{{ client.name }}</td>
+			<td>{{ client.lastname }}</td>
+			<td>{{ client.email }}</td>
+      <td>{{ client.state }}</td>
 		</tr>
 	</tbody>
 </table>
