--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -30,8 +30,8 @@
 	</ngb-pagination>
 
 	<select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshElements()">
-		<option [ngValue]="15">15 items per page</option>
-		<option [ngValue]="30">30 items per page</option>
-		<option [ngValue]="45">45 items per page</option>
+		<option [ngValue]="15">15 por pagina</option>
+		<option [ngValue]="30">30 por pagina</option>
+		<option [ngValue]="45">45 por pagina</option>
 	</select>
 </div>
