--- a/src/app/session/session.component.html
+++ b/src/app/session/session.component.html
@@ -1,13 +1,2 @@
-<div class="row m-2">
-	<div class="col">
-		<div ngbDropdown class="d-inline-block">
-			<button type="button" class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>
-				Empleado
-			</button>
-			<div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-				<button ngbDropdownItem>Ajustes de cuenta</button>
-				<button ngbDropdownItem>Cerrar sesion</button>
-			</div>
-		</div>
-	</div>
-</div>
+<app-menu></app-menu>
+<app-nav></app-nav>
