--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf=" !isLogin ; else elseBlock">
+<ng-container *ngIf=" !isLogin ; else elseBlock">
   <app-login></app-login>
-</div>
+</ng-container>
 <ng-template #elseBlock><app-session></app-session></ng-template>
