--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,13 +1,4 @@
-<div class="row m-2">
-	<div class="col">
-		<div ngbDropdown class="d-inline-block">
-			<button type="button" class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>
-				Empleado
-			</button>
-			<div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-				<button ngbDropdownItem>Ajustes de cuenta</button>
-				<button ngbDropdownItem>Cerrar sesion</button>
-			</div>
-		</div>
-	</div>
+<div class="d-grid gap-2 d-md-flex justify-content-md-end m-2">
+  <button class="btn btn-primary me-md-2" type="button">Perfil</button>
+  <button class="btn btn-danger" type="button">Cerrar Sesión</button>
 </div>
