--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,35 +1,1 @@
-<h1>{{ nav }}</h1>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">#id</th>
-      <th scope="col">Nombre</th>
-      <th scope="col">Apellido</th>
-      <th scope="col">Correo</th>
-      <th scope="col">Estado</th>
-      <th scope="col">Rol</th>
-      <th scope="col">Editar</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let client of elements_pie">
-      <th scope="row">{{ client.id }}</th>
-      <td>{{ client.name }}</td>
-      <td>{{ client.lastname }}</td>
-      <td>{{ client.email }}</td>
-      <td>{{ client.status }}</td>
-      <td>{{ client.role }}</td>
-      <td><button type="button" class="btn btn-primary" (click)="editar()">Editar</button></td>
-    </tr>
-  </tbody>
-</table>
-
-<div class="d-flex justify-content-between p-2">
-  <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize" (pageChange)="refreshPie()">
-  </ngb-pagination>
-
-  <select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshPie()">
-    <option [ngValue]="10">10 items per page</option>
-    <option [ngValue]="20">20 items per page</option>
-  </select>
-</div>
+<app-usuario></app-usuario>
